[gd_scene load_steps=3 format=3 uid="uid://cs0vun6knevg8"]

[ext_resource type="Script" path="res://UI/LoseScreen/LoseScreen.gd" id="1_gwhdq"]
[ext_resource type="LabelSettings" uid="uid://bbyc5e3ytxh36" path="res://UI/Shadometer/shadometerFont.tres" id="1_jkkgf"]

[node name="LoseScreen" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gwhdq")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.258824, 0.258824, 0.258824, 0.760784)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="GameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Game Over!"
label_settings = ExtResource("1_jkkgf")

[node name="ElapsedLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Time Elapsed"
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2
color = Color(0.364706, 0.192157, 0.505882, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="HrLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "hrs"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="MinLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "min"

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="SecLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "sec"
